--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
         </div>
 
         <div class="row g-4 justify-content-center">
-            <div class="col-md-5">
+            <div class="col-md-6">
                 <div class="text-start info-card p-4 shadow-sm">
                     <div class="icon mb-3">
                         <img src="img/icon-globe.svg" alt="Иконка">
@@ -62,7 +62,7 @@
                     <p class="text-muted">СНГ, Индия, Азия, Латинская Америка и др.</p>
                 </div>
             </div>
-            <div class="col-md-5">
+            <div class="col-md-6">
                 <div class="text-start info-card p-4 shadow-sm">
                     <div class="icon mb-3">
                         <img src="img/icon-currency.svg" alt="Иконка">
@@ -71,6 +71,273 @@
                     <p class="text-muted">UZS, TJS, INR, KRW, TRY, BDT, PKR, EGP, VND, ARS и др.</p>
                 </div>
             </div>
+        </div>
+    </div>
+</section>
+
+<section class="features">
+    <div class="container" style="max-width: 1320px;">
+        <div class="text-center mb-5">
+            <h2>
+                <span class="gradient-text">Ключевые</span> возможности
+            </h2>
+        </div>
+
+        <div class="row g-4 justify-content-center">
+            <!-- Блок 1 -->
+            <div class="col-md-4">
+                <div class="feature-card p-4 shadow-sm">
+                    <div class="feature-number">1</div>
+                    <h5>Приём платежей:</h5>
+                    <ul>
+                        <li>Методы: e-commerce, P2P, phone, QR и другие.</li>
+                        <li>Поддержка гибких курсов, трансграничных платежей и частичной оплаты.</li>
+                    </ul>
+                </div>
+            </div>
+
+            <!-- Блок 2 -->
+            <div class="col-md-4">
+                <div class="feature-card p-4 shadow-sm">
+                    <div class="feature-number">2</div>
+                    <h5>Выплаты:</h5>
+                    <ul>
+                        <li>Лимиты, автоматизированные очереди, таймеры.</li>
+                        <li>Расширенные настройки логики и приоритетов.</li>
+                    </ul>
+                </div>
+            </div>
+
+            <!-- Блок 3 -->
+            <div class="col-md-4">
+                <div class="feature-card p-4 shadow-sm">
+                    <div class="feature-number">3</div>
+                    <h5>Споры и безопасность:</h5>
+                    <ul>
+                        <li>Telegram-бот для споров (API инициатива или через UI).</li>
+                        <li>Автоматическая проверка чеков, антифрод-паттерны, уведомления 24/7.</li>
+                    </ul>
+                </div>
+            </div>
+        </div>
+
+        <div class="text-center mt-5">
+            <a href="#" class="btn btn-main">Стать клиентом</a>
+        </div>
+    </div>
+</section>
+
+<section class="white-label">
+    <div class="container" style="max-width: 1320px;">
+        <div class="text-center mb-5">
+            <h2><span class="gradient-text">White-label</span> возможности</h2>
+        </div>
+
+        <div class="row g-5">
+            <!-- Готовая инфраструктура -->
+            <div class="col-md-6 col-xl-6">
+                <div class="wl-card p-4">
+                    <div class="wl-icon wl-icon-1">
+                        <img src="img/icon-1.svg" alt="Иконка">
+                    </div>
+                    <h5>Готовая инфраструктура</h5>
+                    <p>С возможностью брендирования под клиента</p>
+                    <img src="img/img-1.png" class="img-fluid mt-auto" alt="Графика">
+                </div>
+            </div>
+
+            <!-- Быстрый запуск -->
+            <div class="col-md-6 col-xl-6">
+                <div class="wl-card p-4">
+                    <div class="wl-icon wl-icon-2">
+                        <img src="img/icon-2.svg" alt="Иконка">
+                    </div>
+                    <h5>Быстрый запуск</h5>
+                    <p>С возможностью кастомизации методов и бизнес-логики</p>
+                    <img src="img/img-2.png" class="img-fluid mt-auto" alt="Графика">
+                </div>
+            </div>
+
+            <!-- Отдельные кабинеты -->
+            <div class="col-md-6 col-xl-6">
+                <div class="wl-card p-4">
+                    <div class="wl-icon wl-icon-3">
+                        <img src="img/icon-3.svg" alt="Иконка">
+                    </div>
+                    <h5>Отдельные кабинеты</h5>
+                    <p>Ролевое управление, распределение потоков<br> по собственным правилам</p>
+                    <img src="img/img-3.png" class="img-fluid mt-auto" alt="Графика">
+                </div>
+            </div>
+
+            <!-- Фундамент для финтеха -->
+            <div class="col-md-6 col-xl-6">
+                <div class="wl-card p-4">
+                    <div class="wl-icon wl-icon-4">
+                        <img src="img/icon-4.svg" alt="Иконка">
+                    </div>
+                    <h5>Фундамент для вашего финтеха</h5>
+                    <p>Для масштабирования трафика и построения<br> внутренних платёжных систем</p>
+                    <img src="img/img-4.png" class="img-fluid mt-auto" alt="Графика">
+                </div>
+            </div>
+        </div>
+    </div>
+</section>
+
+<section class="plans">
+    <div class="container" style="max-width: 1320px;">
+        <div class="text-center mb-5">
+            <h2>Пакеты запуска White-Label<br>на базе PayGuru</h2>
+        </div>
+
+        <div class="row g-4 mb-4">
+            <!-- Тариф: Aggregator -->
+            <div class="col-md-6 col-xl-4">
+                <div class="plan-card">
+                    <div class="plan-label">Пакет</div>
+                    <h4>Demo</h4>
+                    <p class="small">Индивидуальный тестовый доступ</p>
+                    <ul class="plan-info">
+                        <li>Стоимость: <strong>от $5,000</strong></li>
+                        <li>Ставка платформы: -</li>
+
+                    </ul>
+                    <h6>Что входит?</h6>
+                    <ul>
+                        <li>Личный тестовый сервер</li>
+                        <li>Доступ к админ-панели</li>
+                        <li>Возможность провести собственную<br>интеграцию</li>
+
+                    </ul>
+                    <a href="#" class="btn btn-blue mt-auto mb-3">Узнать подробнее</a>
+                    <p class="text-center plan-foot small">Стоимость может быть зачтена<br>при переходе на старший пакет </p>
+                </div>
+            </div>
+
+            <!-- Тариф: Enterprise -->
+            <div class="col-md-6 col-xl-4">
+                <div class="plan-card">
+                    <div class="plan-label">Пакет</div>
+                    <h4>StartUp</h4>
+                    <p class="small">Быстрый запуск под брендом</p>
+                    <ul class="plan-info">
+                        <li>Стоимость: <strong>от $35,000</strong></li>
+                        <li>Ставка платформы: 0.4%</li>
+                        <li>Интеграций в месяц: 1</li>
+                    </ul>
+                    <h6>Что входит?</h6>
+                    <ul>
+                        <li>Домен + SSL</li>
+                        <li>Тестовый и продовый сервер</li>
+                        <li>Брендирование платформы</li>
+                        <li>Учебная документация и поддержка<br>запуска</li>
+                    </ul>
+                    <a href="#" class="btn btn-blue mt-auto mb-3">Узнать подробнее</a>
+                    <p class="text-center plan-foot small">Максимум возможностей. Для зрелых команд и масштабируемых запусков</p>
+                </div>
+            </div>
+
+            <!-- Тариф: PayGuru WL Kit -->
+            <div class="col-md-6 col-xl-4">
+                <div class="plan-card">
+                    <div class="plan-label">Пакет</div>
+                    <h4>PSP</h4>
+                    <p class="small">Ваша собственная платёжная система</p>
+                    <ul class="plan-info">
+                        <li>Стоимость: <strong>от $60,000</strong></li>
+                        <li>Ставка платформы: 0.3%</li>
+                        <li>Интеграций в месяц: 2</li>
+                    </ul>
+                    <h6>Что входит?</h6>
+                    <ul>
+                        <li>Всё из StartUp </li>
+                        <li>Подключение Support-бота</li>
+                        <li>Брендирование платформы</li>
+                        <li>Расширенные инструменты приёма<br>и обработки платежей</li>
+                    </ul>
+                    <a href="#" class="btn btn-blue mt-auto mb-3">Узнать подробнее</a>
+                    <p class="text-center plan-foot small">Максимум возможностей. Для зрелых команд и масштабируемых запусков</p>
+                </div>
+            </div>
+        </div>
+
+        <div class="row g-4 ">
+            <!-- Тариф: Aggregator -->
+            <div class="col-md-6 col-xl-4">
+                <div class="plan-card">
+                    <div class="plan-label">Пакет</div>
+                    <h4>Aggregator</h4>
+                    <p class="small">Контроль над каскадом</p>
+                    <ul class="plan-info">
+                        <li>Стоимость: <strong>от $60,000</strong></li>
+                        <li>Ставка платформы: 0.3%</li>
+                        <li>Интеграций в месяц: 2</li>
+                    </ul>
+                    <h6>Что входит?</h6>
+                    <ul>
+                        <li>Всё из StartUp</li>
+                        <li>Инструменты управления шлюзами</li>
+                        <li>Гибкая логика выдачи реквизитов</li>
+                        <li>Полный контроль над<br>распределением потоков трафика</li>
+                    </ul>
+                    <a href="#" class="btn btn-blue mt-auto mb-3">Узнать подробнее</a>
+                    <p class="text-center plan-foot small">Для команд, которые работают с внешними исполнителями</p>
+                </div>
+            </div>
+
+            <!-- Тариф: Enterprise -->
+            <div class="col-md-6 col-xl-4">
+                <div class="plan-card">
+                    <div class="plan-label">Пакет</div>
+                    <h4>Enterprise</h4>
+                    <p class="small">Всё включено</p>
+                    <ul class="plan-info">
+                        <li>Стоимость: <strong>от $105,000</strong></li>
+                        <li>Ставка платформы: 0.25%</li>
+                        <li>Интеграций в месяц: 4</li>
+                    </ul>
+                    <h6>Что входит?</h6>
+                    <ul>
+                        <li>Всё из PSP и Aggregator</li>
+                        <li>Кастомизация API</li>
+                        <li>PayGuru WL Kit</li>
+                    </ul>
+                    <a href="#" class="btn btn-blue mt-auto mb-3">Узнать подробнее</a>
+                    <p class="text-center plan-foot small">Максимум возможностей. Для зрелых команд и масштабируемых запусков</p>
+                </div>
+            </div>
+
+            <!-- Тариф: PayGuru WL Kit -->
+            <div class="col-md-6 col-xl-4">
+                <div class="plan-card">
+                    <div class="plan-label">Add-On</div>
+                    <h4>PayGuru WL Kit</h4>
+                    <p class="small">Стоимость: <strong>$15,000</strong></p>
+                    <ul>
+                        <li>Настроенные бизнес-процессы и Telegram инфраструктура</li>
+                        <li>AI интеграция PayGuru X ChatGPT</li>
+                        <li>Пошаговое руководство и документация</li>
+                        <li>Trello-доски, шаблоны, чеклисты, доступы</li>
+                        <li>Для тех, кто хочет не просто WL,<br>а прибыльный fintech-актив</li>
+                    </ul>
+                    <a href="#" class="btn btn-blue mt-auto mb-3">Узнать подробнее</a>
+                    <p class="text-center plan-foot small">Для тех, кто хочет не просто WL,<br>а прибыльный fintech-актив</p>
+                </div>
+            </div>
+        </div>
+
+        <!-- Add-On: Доп. интеграция -->
+        <div class="addon-card mt-4">
+            <div class="d-flex flex-column flex-md-row justify-content-between align-items-start align-items-md-center gap-3">
+                <div>
+                    <div class="plan-label">Add-On</div>
+                    <h5>Дополнительная интеграция</h5>
+                    <p class="mb-0">Стоимость: от $1,500</p>
+                </div>
+                <a href="#" class="btn btn-blue">Узнать подробнее</a>
+            </div>
+            <p class="plan-foot small mt-2">Интеграция нового шлюза, Мерчанта, Агрегатора по API</p>
         </div>
     </div>
 </section>
