--- a/index.html
+++ b/index.html
@@ -342,5 +342,189 @@
     </div>
 </section>
 
+
+<section class="features features__bg">
+    <div class="container" style="max-width: 1320px;">
+        <div class="text-center mb-5">
+            <h2>
+                <span class="gradient-text">Алгоритм </span> распределения сделок
+            </h2>
+        </div>
+
+        <div class="row g-4 justify-content-center">
+            <!-- Блок 1 -->
+            <div class="col-md-4">
+                <div class="feature-card p-4 shadow-sm">
+                    <div class="feature-number">1</div>
+                    <h5>25+ параметров отбора</h5>
+                    <ul>
+                        <li>Надёжность </li>
+                        <li>Нагрузка </li>
+                        <li>Ограничения </li>
+                    </ul>
+                </div>
+            </div>
+
+            <!-- Блок 2 -->
+            <div class="col-md-4">
+                <div class="feature-card p-4 shadow-sm">
+                    <div class="feature-number">2</div>
+                    <h5>Распределение по весам и приоритетам</h5>
+                    <ul>
+                        <li>С исключениями по последним сделкам</li>
+
+                    </ul>
+                </div>
+            </div>
+
+            <!-- Блок 3 -->
+            <div class="col-md-4">
+                <div class="feature-card p-4 shadow-sm">
+                    <div class="feature-number">3</div>
+                    <h5>Интеллектуальные «отступы» </h5>
+                    <ul>
+                        <li>Для трансграничных переводов</li>
+
+                    </ul>
+                </div>
+            </div>
+        </div>
+
+
+    </div>
+</section>
+<section class="roles">
+    <div class="container" style="max-width: 1320px;">
+        <h2 class="text-center mb-5">Ролевая модель</h2>
+
+        <div class="role-table-wrapper">
+            <table class="table role-table mb-0">
+                <thead>
+                <tr>
+                    <th>Роль</th>
+                    <th>Основные права</th>
+                </tr>
+                </thead>
+                <tbody>
+                <tr>
+                    <td>Owner</td>
+                    <td>Полный контроль над платформой</td>
+                </tr>
+                <tr>
+                    <td>Manager</td>
+                    <td>Настройка тарифов, конфигурация рабочих параметров</td>
+                </tr>
+                <tr>
+                    <td>Administrator</td>
+                    <td>Мониторинг ключевых метрик, частичная настройка</td>
+                </tr>
+                <tr>
+                    <td>Trader</td>
+                    <td>Обработка операций и споров</td>
+                </tr>
+                <tr>
+                    <td>SubTrader</td>
+                    <td>Взаимодействие с выплатами и системой</td>
+                </tr>
+                <tr>
+                    <td>Support</td>
+                    <td>Ведение споров и верификация чеков через Telegram-бот</td>
+                </tr>
+                <tr>
+                    <td>TeamLead</td>
+                    <td>Привлечение контрагентов за комиссионное вознаграждение</td>
+                </tr>
+                </tbody>
+            </table>
+        </div>
+    </div>
+</section>
+<section class="smart-interface position-relative">
+    <div class="container" style="max-width: 1320px;">
+        <div class="text-center mb-5">
+            <h2>
+                <span class="gradient-text">Smart-интерфейс</span><br>
+                для платёжного бизнеса
+            </h2>
+        </div>
+
+        <div class="smart-ui-img text-center mb-5">
+            <img src="img/smart-ui.png" alt="Smart UI интерфейс" class="img-fluid">
+        </div>
+
+        <div class="row g-4 text-center justify-content-center">
+            <div class="col-md-6 col-lg-3">
+                <div class="smart-card">
+                    <h5><span class="gradient-text">Smart</span><br> <span class="gradient-text">Payouts</span></h5>
+                    <p>Auto/manual режимы под фермы + netting + matching</p>
+                </div>
+            </div>
+
+            <div class="col-md-6 col-lg-3">
+                <div class="smart-card">
+                    <h5><span class="gradient-text">Risk</span><br> <span class="gradient-text">Shield </span></h5>
+                    <p>Roling reserve, фильтры для подозрительного трафика, соответствие шифрованию PSI DSS</p>
+                </div>
+            </div>
+
+            <div class="col-md-6 col-lg-3">
+                <div class="smart-card">
+                    <h5><span class="gradient-text">Pay</span><br> <span class="gradient-text">Anywhere</span></h5>
+                    <p>QR-коды, платёжные ссылки, мультивалютные счета</p>
+                </div>
+            </div>
+
+            <div class="col-md-6 col-lg-3">
+                <div class="smart-card">
+                    <h5><span class="gradient-text">Real-Time</span><br> <span class="gradient-text">Analytics</span></h5>
+                    <p>Дашборды с анализом конверсии. Прогнозирование трендов. Детальные отчёты в Excel</p>
+                </div>
+            </div>
+        </div>
+    </div>
+</section>
+<section class="coverage coverage__bg-none">
+    <div class="container" style="max-width: 1320px;">
+        <div class="text-center mb-5">
+            <h2>
+                <span class="text-primary">Надёжность</span>и поддержка
+            </h2>
+        </div>
+
+        <div class="row g-4 justify-content-center">
+            <div class="col-md-4">
+                <div class="text-start info-card p-4 shadow-sm">
+                    <div class="icon mb-3">
+                        <img src="img/icon-calling.svg" alt="Иконка">
+                    </div>
+                    <h4>SLA 99.9%</h4>
+                    <p class="text-muted">Круглосуточная поддержка 24/7<br>
+                        без простоев</p>
+                </div>
+            </div>
+            <div class="col-md-4">
+                <div class="text-start info-card p-4 shadow-sm">
+                    <div class="icon mb-3">
+                        <img src="img/icon-send.svg" alt="Иконка">
+                    </div>
+                    <h4>Мониторинг</h4>
+                    <p class="text-muted"> Оповещения в Telegram</p>
+                </div>
+            </div>
+            <div class="col-md-4">
+                <div class="text-start info-card p-4 shadow-sm">
+                    <div class="icon mb-3">
+                        <img src="img/icon-activity.svg" alt="Иконка">
+                    </div>
+                    <h4>Полное логирование</h4>
+                    <p class="text-muted">Аудит, стабильная работа<br>
+                        под высокой нагрузкой</p>
+                </div>
+            </div>
+
+        </div>
+    </div>
+</section>
+
 </body>
 </html>
