--- a/index.html
+++ b/index.html
@@ -282,7 +282,7 @@
                         <li>Полный контроль над<br>распределением потоков трафика</li>
                     </ul>
                     <a href="#" class="btn btn-blue mt-auto mb-3">Узнать подробнее</a>
-                    <p class="text-center plan-foot small">Для команд, которые работают с внешними исполнителями</p>
+                    <p class="text-center plan-foot small">Для команд, которые работают<br> с внешними исполнителями</p>
                 </div>
             </div>
 
