--- a/index.html
+++ b/index.html
@@ -193,7 +193,7 @@
 
         <div class="row g-4 mb-4">
             <!-- Тариф: Aggregator -->
-            <div class="col-md-6 col-xl-4">
+            <div class="col-md-4 col-sm-12">
                 <div class="plan-card">
                     <div class="plan-label">Пакет</div>
                     <h4>Demo</h4>
@@ -216,7 +216,7 @@
             </div>
 
             <!-- Тариф: Enterprise -->
-            <div class="col-md-6 col-xl-4">
+            <div class="col-md-4 col-sm-12">
                 <div class="plan-card">
                     <div class="plan-label">Пакет</div>
                     <h4>StartUp</h4>
@@ -239,7 +239,7 @@
             </div>
 
             <!-- Тариф: PayGuru WL Kit -->
-            <div class="col-md-6 col-xl-4">
+            <div class="col-md-4 col-sm-12">
                 <div class="plan-card">
                     <div class="plan-label">Пакет</div>
                     <h4>PSP</h4>
@@ -264,7 +264,7 @@
 
         <div class="row g-4 ">
             <!-- Тариф: Aggregator -->
-            <div class="col-md-6 col-xl-4">
+            <div class="col-md-4 col-sm-12">
                 <div class="plan-card">
                     <div class="plan-label">Пакет</div>
                     <h4>Aggregator</h4>
@@ -287,7 +287,7 @@
             </div>
 
             <!-- Тариф: Enterprise -->
-            <div class="col-md-6 col-xl-4">
+            <div class="col-md-4 col-sm-12">
                 <div class="plan-card">
                     <div class="plan-label">Пакет</div>
                     <h4>Enterprise</h4>
@@ -309,7 +309,7 @@
             </div>
 
             <!-- Тариф: PayGuru WL Kit -->
-            <div class="col-md-6 col-xl-4">
+            <div class="col-md-4 col-sm-12">
                 <div class="plan-card">
                     <div class="plan-label">Add-On</div>
                     <h4>PayGuru WL Kit</h4>
@@ -525,6 +525,117 @@
         </div>
     </div>
 </section>
+
+
+<section class="white-label white-label__bg position-relative">
+    <div class="container" style="max-width: 1320px;">
+        <div class="text-center mb-5">
+            <h2><span class="gradient-text">Скорость</span>внедрения и развитие</h2>
+        </div>
+
+        <div class="row mb-5 g-5">
+            <!-- Готовая инфраструктура -->
+            <div class="col-md-6 col-xl-6">
+                <div class="wl-card p-4">
+                    <div class="wl-icon wl-icon-1">
+                        <img src="img/icon-calendar.svg" alt="Иконка">
+                    </div>
+                    <h5>Развёртывание<br> под бренд клиента</h5>
+                    <p>До 7 дней (домен, лого, конфигурация)</p>
+                    <img src="img/img-calendar.png" class="ms-auto img-fluid w-50 mt-auto" alt="Графика">
+                </div>
+            </div>
+
+            <!-- Быстрый запуск -->
+            <div class="col-md-6 col-xl-6">
+                <div class="wl-card p-4">
+                    <div class="wl-icon wl-icon-2">
+                        <img src="img/icon-setting.svg" alt="Иконка">
+                    </div>
+                    <h5>Еженедельные <br>обновления</h5>
+                    <p>Новые методы оплаты и функционал<br>
+                        без остановки сервисов</p>
+                    <img src="img/img-setting.png" class="ms-auto img-fluid w-50 mt-auto" alt="Графика">
+                </div>
+            </div>
+
+
+        </div>
+        <h2 class="text-center pt-5 fw-bold">Технологии в действии</h2>
+    </div>
+</section>
+
+<section class="tech-section ">
+    <div class="container" style="max-width: 1320px;">
+
+
+        <div class="tech-grid">
+
+                <div class="tech-card   tech-card control">
+                    <h5><span class="gradient-text">Контроль</span></h5>
+                    <p>Полный доступ к бизнес-логике, API и параметрам</p>
+                </div>
+                <div class="tech-card   reliability">
+                    <h5><span class="gradient-text">Надёжность</span></h5>
+                    <p>Поддержка критически важного бизнеса 24/7, проверено миллионами транзакций</p>
+                </div>
+                <div class="tech-card  security">
+                    <h5><span class="gradient-text">Безопасность</span></h5>
+                    <p>Соответствие PCI DSS, встроенные меры защиты</p>
+                </div>
+                <div class="tech-card flexibility">
+                    <h5><span class="gradient-text">Гибкость</span></h5>
+                    <p>Десятки настроек в UI для тонкой отладки процессов</p>
+                </div>
+
+            <div class="tech-row-bottom">
+                <div class="tech-card   performance">
+                    <h5><span class="gradient-text">Производительность</span></h5>
+                    <p>Тысячи TPS без деградации, даже при пиковых нагрузках</p>
+                </div>
+                <div class="tech-card  scalability">
+                    <h5><span class="gradient-text">Масштабируемость</span></h5>
+                    <p>Быстрый выход в новые юрисдикции</p>
+                </div>
+                <div class="tech-card  automation">
+                    <h5><span class="gradient-text">Автоматизация</span></h5>
+                    <p>Более 90% операций проходят без ручного вмешательства; интеллектуальная маршрутизация</p>
+                </div>
+            </div>
+        </div>
+
+    </div>
+</section>
+<footer class="footer position-relative">
+    <div class="container" style="max-width: 1320px;">
+        <img src="img/logo.svg" alt="PayGuru" class="footer-logo ">
+        <div class="footer-grid">
+
+            <!-- Левая колонка -->
+            <div class="footer-left">
+
+                <h3 class="fw-bold">PayGuru</h3>
+                <p class=" mb-4">Решение, которому доверяют</p>
+                <a href="#" class="btn btn-blue">Стать клиентом</a>
+            </div>
+
+            <!-- Правая колонка -->
+            <div class="footer-right">
+                <h5 class="fw-bold ">Контакты</h5>
+                <p>support@pay-guru.io</p>
+                <p><strong>Telegram:</strong> @wlpg_support_bot</p>
+                <div class="footer-links mt-4">
+                    <a href="#">Terms of Service</a> ·
+                    <a href="#">Privacy Policy</a>
+                </div>
+            </div>
+        </div>
+
+        <div class="text-center mt-5 small text-muted">
+            PayGuru WL Solution. All rights reserved © 2025
+        </div>
+    </div>
+</footer>
 
 </body>
 </html>
