--- a/index.html
+++ b/index.html
@@ -470,7 +470,7 @@
             <img src="img/smart-ui.png" alt="Smart UI интерфейс" class="img-fluid">
         </div>
 
-        <div class="row g-4 text-center justify-content-center">
+        <div class="row g-3 g-lg-4 text-center justify-content-center">
             <div class="col-6 col-lg-3">
                 <div class="smart-card">
                     <h5><span class="gradient-text">Smart</span><br> <span class="gradient-text">Payouts</span></h5>
