--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
         <div class="text-center text-md-start col-md-6">
 
             <h1>PayGuru</h1>
-            <p>Универсальный платёжный агрегатор с глобальным покрытием и гибкими возможностями</p>
+            <p>Универсальный платёжный агрегатор<br class="d-none d-md-block"> с глобальным покрытием и гибкими<br class="d-none d-md-block"> возможностями</p>
             <a href="#about"  class="btn btn-main">Узнать подробнее</a>
         </div>
         <div class="col-md-6 text-center">
@@ -37,7 +37,7 @@
     <div id="about" class="platform">
         <h2>О платформе</h2>
         <p>
-            <strong>PayGuru</strong> — система управления денежными потоками, объединяющая различные платёжные методы и инфраструктуру. Единая точка контроля и маршрутизации с гибкой логикой обработки, аналитикой и автоматизацией.
+            <strong>PayGuru</strong> — система управления денежными потоками, объединяющая различные<br class="d-none d-md-block"> платёжные методы и инфраструктуру. Единая точка контроля и маршрутизации<br class="d-none d-md-block"> с гибкой логикой обработки, аналитикой и автоматизацией.
         </p>
         <img class="hero-image d-none d-md-inline-block" src="img/man-computer-placeholder.png" alt="User Graphic">
         <img class="hero-image d-inline-block d-md-none" src="img/man-computer-placeholder-mob.png" alt="User Graphic">
