--- a/index.html
+++ b/index.html
@@ -22,13 +22,13 @@
     </div>
     <!-- Hero Section -->
     <div class="row align-items-center hero">
-        <div class="text-center text-md-start col-md-6">
+        <div class="text-center text-md-start col-md-5">
 
             <h1>PayGuru</h1>
             <p>Универсальный платёжный агрегатор<br class="d-none d-md-block"> с глобальным покрытием и гибкими<br class="d-none d-md-block"> возможностями</p>
             <a href="#about"  class="btn btn-main">Узнать подробнее</a>
         </div>
-        <div class="col-md-6 text-center">
+        <div class="col-md-7 text-center">
             <img src="img/wallet.png" alt="Wallet Graphic" class="hero-image">
         </div>
     </div>
@@ -87,7 +87,7 @@
         <div class="row g-3 g-lg-4 justify-content-center">
             <!-- Блок 1 -->
             <div class="col-6 col-lg-4">
-                <div class="feature-card  p-2 p-lg-4 shadow-sm">
+                <div class="feature-card  shadow-sm">
                     <div class="feature-number">1</div>
                     <h5>Приём платежей:</h5>
                     <ul>
@@ -99,7 +99,7 @@
 
             <!-- Блок 2 -->
             <div class="col-6 col-lg-4">
-                <div class="feature-card  p-2 p-lg-4 shadow-sm">
+                <div class="feature-card  shadow-sm">
                     <div class="feature-number">2</div>
                     <h5>Выплаты:</h5>
                     <ul>
@@ -111,7 +111,7 @@
 
             <!-- Блок 3 -->
             <div class="col-6 col-lg-4">
-                <div class="feature-card  p-2 p-lg-4 shadow-sm">
+                <div class="feature-card  shadow-sm">
                     <div class="feature-number">3</div>
                     <h5>Споры и безопасность:</h5>
                     <ul>
@@ -121,9 +121,9 @@
                 </div>
             </div>
             <div class="d-inline-block d-lg-none col-6 col-lg-4">
-                <div class="feature-card border-0 bg-transparent shadow-0  p-0 p-lg-4  ">
+                <div class="feature-card border-0 bg-transparent shadow-0   ">
                     <img class=" m-auto mb-5 d-flex justify-center" src="img/info.svg" alt="Иконка">
-                    <a href="#" class="btn btn-main">Стать клиентом</a>
+                    <a href="#" class="btn btn-main open-modal">Стать клиентом</a>
                 </div>
             </div>
         </div>
@@ -204,7 +204,7 @@
             <h2>Пакеты запуска White-Label<br>на базе PayGuru</h2>
         </div>
 
-        <div class="row g-4 mb-4">
+        <div class="row g-5 mb-5">
             <!-- Тариф: Aggregator -->
             <div class="col-md-4 col-sm-12">
                 <div class="plan-card">
@@ -277,7 +277,7 @@
             </div>
         </div>
 
-        <div class="row g-4 ">
+        <div class="row g-5 mb-5">
             <!-- Тариф: Aggregator -->
             <div class="col-md-4 col-sm-12">
                 <div class="plan-card">
@@ -362,7 +362,7 @@
     <div class="container" style="max-width: 1320px;">
         <div class="text-center mb-5">
             <h2>
-                <span class="gradient-text">Алгоритм </span> распределения сделок
+                <span class="gradient-text">Алгоритм </span><br class="d-none d-md-block"> распределения сделок
             </h2>
         </div>
 
@@ -413,7 +413,7 @@
 </section>
 <section class="roles">
     <div class="container" style="max-width: 1320px;">
-        <h2 class="text-center mb-5">Ролевая модель</h2>
+        <h2 class="text-center ">Ролевая модель</h2>
 
         <div class="role-table-wrapper">
             <table class="table role-table mb-0">
@@ -511,7 +511,7 @@
 
         <div class="row g-3 g-lg-4 justify-content-center">
             <div class="col-6  col-lg-4">
-                <div class="text-start info-card p-2 p-lg-4 shadow-sm">
+                <div class="text-start info-card shadow-sm">
                     <div class="icon mb-3">
                         <img src="img/icon-calling.svg" alt="Иконка">
                     </div>
@@ -521,7 +521,7 @@
                 </div>
             </div>
             <div class="col-6  col-lg-4">
-                <div class="text-start info-card p-2 p-lg-4 shadow-sm">
+                <div class="text-start info-card  shadow-sm">
                     <div class="icon mb-3">
                         <img src="img/icon-send.svg" alt="Иконка">
                     </div>
@@ -530,7 +530,7 @@
                 </div>
             </div>
             <div class="col-6  col-lg-4">
-                <div class="text-start info-card p-2 p-lg-4 shadow-sm">
+                <div class="text-start info-card  shadow-sm">
                     <div class="icon mb-3">
                         <img src="img/icon-activity.svg" alt="Иконка">
                     </div>
@@ -554,7 +554,7 @@
 <section class="white-label white-label__bg position-relative">
     <div class="container" style="max-width: 1320px;">
         <div class="text-center mb-5">
-            <h2><span class="gradient-text">Скорость</span>внедрения и развитие</h2>
+            <h2><span class="gradient-text">Скорость</span>  внедрения <br class="d-none d-md-block"> и развитие</h2>
         </div>
 
         <div class="row mb-5 g-5">
@@ -585,7 +585,7 @@
 
 
         </div>
-        <h2 class="text-center pt-5 fw-bold">Технологии в действии</h2>
+        <h2 class="text-center pt-7 fw-bold">Технологии в действии</h2>
     </div>
 </section>
 
@@ -655,7 +655,7 @@
             </div>
         </div>
 
-        <div class="text-center mt-0 mt-lg-5 small text-muted">
+        <div class="text-center mt-9 small text-muted">
             PayGuru WL Solution. All rights reserved © 2025
         </div>
     </div>
