--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@
     <div class="container" style="max-width: 1320px;">
         <div class="text-center mb-5">
             <h2>
-                <span class="gradient-text">Ключевые</span> возможности
+                <span class="gradient-text">Ключевые</span><br class="d-block d-md-none"> возможности
             </h2>
         </div>
 
@@ -122,7 +122,7 @@
             </div>
             <div class="d-inline-block d-lg-none col-6 col-lg-4">
                 <div class="feature-card border-0 bg-transparent shadow-0   ">
-                    <img class=" m-auto mb-5 d-flex justify-center" src="img/info.svg" alt="Иконка">
+                    <img class="info-img m-auto mb-5 d-flex justify-center" src="img/info.png" alt="Иконка">
                     <a href="#" class="btn btn-main open-modal">Стать клиентом</a>
                 </div>
             </div>
@@ -139,18 +139,18 @@
 <section class="white-label">
     <div class="container" style="max-width: 1320px;">
         <div class="text-center pb-1 pb-md-0 mb-5">
-            <h2><span class="gradient-text">White-label</span> возможности</h2>
+            <h2><span class="gradient-text">White-label</span><br class="d-block d-md-none"> возможности</h2>
         </div>
 
         <div class="row g-3 g-lg-5">
             <!-- Готовая инфраструктура -->
             <div class="col-md-6 col-xl-6">
-                <div class="wl-card p-2 p-lg-4">
+                <div class="wl-card p-4">
                     <div class="wl-icon wl-icon-1">
                         <img src="img/icon-1.svg" alt="Иконка">
                     </div>
                     <h5>Готовая инфраструктура</h5>
-                    <p>С возможностью брендирования под клиента</p>
+                    <p>С возможностью брендирования <br class="d-block d-md-none">под клиента</p>
                     <img src="img/img-1.png" class="d-none d-md-flex img-fluid mt-auto" alt="Графика">
                     <img src="img/img-1-mob.png" class="d-inline-block d-md-none img-fluid mt-auto" alt="Графика">
                 </div>
@@ -158,12 +158,12 @@
 
             <!-- Быстрый запуск -->
             <div class="col-md-6 col-xl-6">
-                <div class="wl-card p-2 p-lg-4">
+                <div class="wl-card p-4">
                     <div class="wl-icon wl-icon-2">
                         <img src="img/icon-2.svg" alt="Иконка">
                     </div>
                     <h5>Быстрый запуск</h5>
-                    <p>С возможностью кастомизации методов и бизнес-логики</p>
+                    <p>С возможностью кастомизации <br class="d-block d-md-none">методов и бизнес-логики</p>
                     <img src="img/img-2.png" class="d-none d-md-flex img-fluid mt-auto" alt="Графика">
                     <img src="img/img-2-mob.png" class="d-inline-block d-md-none img-fluid mt-auto" alt="Графика">
                 </div>
@@ -171,12 +171,12 @@
 
             <!-- Отдельные кабинеты -->
             <div class="col-md-6 col-xl-6">
-                <div class="wl-card p-2 p-lg-4">
+                <div class="wl-card p-4">
                     <div class="wl-icon wl-icon-3">
                         <img src="img/icon-3.svg" alt="Иконка">
                     </div>
                     <h5>Отдельные кабинеты</h5>
-                    <p>Ролевое управление, распределение потоков<br> по собственным правилам</p>
+                    <p>Ролевое управление, распределение <br class="d-block d-md-none"> потоков <br class="d-none d-md-block"> по собственным правилам</p>
                     <img src="img/img-3.png" class="d-none d-md-flex img-fluid mt-auto" alt="Графика">
                     <img src="img/img-3-mob.png" class="d-inline-block d-md-none img-fluid mt-auto" alt="Графика">
                 </div>
@@ -184,12 +184,12 @@
 
             <!-- Фундамент для финтеха -->
             <div class="col-md-6 col-xl-6">
-                <div class="wl-card p-2 p-lg-4">
+                <div class="wl-card p-4">
                     <div class="wl-icon wl-icon-4">
                         <img src="img/icon-4.svg" alt="Иконка">
                     </div>
                     <h5>Фундамент для вашего финтеха</h5>
-                    <p>Для масштабирования трафика и построения<br> внутренних платёжных систем</p>
+                    <p>Для масштабирования трафика <br class="d-block d-md-none">и построения <br class="d-none d-md-block"> внутренних <br class="d-block d-md-none">платёжных систем</p>
                     <img src="img/img-4.png" class="d-none d-md-flex img-fluid mt-auto" alt="Графика">
                     <img src="img/img-4-mob.png" class="d-inline-block d-md-none img-fluid mt-auto" alt="Графика">
                 </div>
@@ -201,7 +201,7 @@
 <section class="plans">
     <div class="container" style="max-width: 1320px;">
         <div class="text-center mb-5">
-            <h2>Пакеты запуска White-Label<br>на базе PayGuru</h2>
+            <h2>Пакеты запуска<br class="d-block d-md-none"> White-Label<br class="d-none d-md-block"> на базе <br class="d-block d-md-none">PayGuru</h2>
         </div>
 
         <div class="row g-5 mb-5">
@@ -327,14 +327,17 @@
             <div class="col-md-4 col-sm-12">
                 <div class="plan-card">
                     <div class="plan-label">Add-On</div>
-                    <h4>PayGuru WL Kit</h4>
-                    <p class="small">Стоимость: <strong>$15,000</strong></p>
+                    <ul class="plan-info">
+                        <li>Стоимость: <strong>от $15,000</strong></li>
+                        <li>Полный комплект для запуска </li>
+                        <li>процессингового бизнеса под своим<br> брендом:</li>
+                    </ul>
                     <ul>
-                        <li>Настроенные бизнес-процессы и Telegram инфраструктура</li>
-                        <li>AI интеграция PayGuru X ChatGPT</li>
-                        <li>Пошаговое руководство и документация</li>
-                        <li>Trello-доски, шаблоны, чеклисты, доступы</li>
-                        <li>Для тех, кто хочет не просто WL,<br>а прибыльный fintech-актив</li>
+                        <li><strong>Настроенные бизнес-процессы<br> и Telegram инфраструктура</strong></li>
+                        <li><strong>AI интеграция PayGuru X ChatGPT</strong></li>
+                        <li><strong>Пошаговое руководство и документация</strong></li>
+                        <li><strong>Trello-доски, шаблоны, чеклисты, доступы</strong></li>
+                        <li><strong>Для тех, кто хочет не просто WL,<br>а прибыльный fintech-актив</strong></li>
                     </ul>
                     <a href="#" class="btn btn-blue mt-auto mb-3 open-modal">Узнать подробнее</a>
                     <p class="text-center plan-foot small">Для тех, кто хочет не просто WL,<br>а прибыльный fintech-актив</p>
@@ -362,7 +365,7 @@
     <div class="container" style="max-width: 1320px;">
         <div class="text-center mb-5">
             <h2>
-                <span class="gradient-text">Алгоритм </span><br class="d-none d-md-block"> распределения сделок
+                <span class="gradient-text">Алгоритм </span><br> распределения сделок
             </h2>
         </div>
 
@@ -384,7 +387,7 @@
             <div class="col-6  col-md-4">
                 <div class="feature-card p-2 p-md-4 shadow-sm">
                     <div class="feature-number">2</div>
-                    <h5>Распределение по весам и приоритетам</h5>
+                    <h5>Распределение<br class="d-block d-md-none"> по весам<br class="d-block d-md-none"> и приоритетам</h5>
                     <ul>
                         <li>С исключениями по последним сделкам</li>
 
@@ -462,7 +465,7 @@
         <div class="text-center mb-5">
             <h2>
                 <span class="gradient-text">Smart-интерфейс</span><br>
-                для платёжного бизнеса
+                для платёжного<br class="d-block d-md-none"> бизнеса
             </h2>
         </div>
 
@@ -505,7 +508,7 @@
     <div class="container" style="max-width: 1320px;">
         <div class="text-center mb-5">
             <h2>
-                <span class="text-primary">Надёжность</span>и поддержка
+                <span class="text-primary">Надёжность</span><br class="d-block d-md-none"> и поддержка
             </h2>
         </div>
 
@@ -516,8 +519,8 @@
                         <img src="img/icon-calling.svg" alt="Иконка">
                     </div>
                     <h4>SLA 99.9%</h4>
-                    <p class="text-muted">Круглосуточная поддержка 24/7<br>
-                        без простоев</p>
+                    <p class="text-muted">Круглосуточная<br class="d-block d-md-none"> поддержка 24/7<br class="d-none d-md-block">
+                        без <br class="d-block d-md-none"> простоев</p>
                 </div>
             </div>
             <div class="col-6  col-lg-4">
@@ -554,14 +557,14 @@
 <section class="white-label white-label__bg position-relative">
     <div class="container" style="max-width: 1320px;">
         <div class="text-center mb-5">
-            <h2><span class="gradient-text">Скорость</span>  внедрения <br class="d-none d-md-block"> и развитие</h2>
+            <h2><span class="gradient-text">Скорость</span>  внедрения <br> и развитие</h2>
         </div>
 
         <div class="row mb-5 g-5">
             <!-- Готовая инфраструктура -->
             <div class="col-md-6 col-xl-6">
                 <div class="wl-card p-4">
-                    <div class="wl-icon wl-icon-1">
+                    <div class="wl-icon wl-icon-5">
                         <img src="img/icon-calendar.svg" alt="Иконка">
                     </div>
                     <h5>Развёртывание<br> под бренд клиента</h5>
@@ -573,7 +576,7 @@
             <!-- Быстрый запуск -->
             <div class="col-md-6 col-xl-6">
                 <div class="wl-card p-4">
-                    <div class="wl-icon wl-icon-2">
+                    <div class="wl-icon wl-icon-6">
                         <img src="img/icon-setting.svg" alt="Иконка">
                     </div>
                     <h5>Еженедельные <br>обновления</h5>
@@ -585,10 +588,49 @@
 
 
         </div>
-        <h2 class="text-center pt-7 fw-bold">Технологии в действии</h2>
+        <h2 class="text-center pt-7 fw-bold">Технологии<br class="d-block d-md-none"> в действии</h2>
     </div>
 </section>
 
+
+
+
+<div class="bg-footer-mob position-relative">
+
+<section class="tech-section">
+    <div class="container" style="max-width: 1320px;">
+
+        <div class="tech-box tech-card">
+            <h5><span class="gradient-text">Контроль</span></h5>
+            <p>Полный доступ к бизнес-логике, API и параметрам</p>
+        </div>
+        <div class="tech-box tech-card">
+            <h5><span class="gradient-text">Надёжность</span></h5>
+            <p>Поддержка критически важного бизнеса 24/7, проверено миллионами транзакций</p>
+        </div>
+        <div class="tech-box tech-card">
+            <h5><span class="gradient-text">Безопасность</span></h5>
+            <p>Соответствие PCI DSS, встроенные меры защиты</p>
+        </div>
+        <div class="tech-box tech-card">
+            <h5><span class="gradient-text">Гибкость</span></h5>
+            <p>Десятки настроек в UI для тонкой отладки процессов</p>
+        </div>
+        <div class="tech-box tech-card">
+            <h5><span class="gradient-text">Производительность</span></h5>
+            <p>Тысячи TPS без деградации, даже при пиковых нагрузках</p>
+        </div>
+        <div class="tech-box tech-card">
+            <h5><span class="gradient-text">Масштабируемость</span></h5>
+            <p>Быстрый выход в новые юрисдикции</p>
+        </div>
+        <div class="tech-box tech-card">
+            <h5><span class="gradient-text">Автоматизация</span></h5>
+            <p>Более 90% операций проходят без ручного вмешательства; интеллектуальная маршрутизация</p>
+        </div>
+    </div>
+</section>
+<!----
 <section class="tech-section ">
     <div class="container" style="max-width: 1320px;">
 
@@ -629,7 +671,7 @@
         </div>
 
     </div>
-</section>
+</section>---->
 <footer class="footer position-relative">
     <div class="container" style="max-width: 1320px;">
         <img src="img/logo.svg" alt="PayGuru" class="d-flex justify-content-center justify-content-md-start footer-logo ">
@@ -661,9 +703,23 @@
     </div>
 </footer>
 
+</div>
+
 <div class="modal-overlay" id="modal" style="display: none;">
     <div class="modal-form">
-        <button class="modal-close" id="closeModalBtn">&times;</button>
+        <button class="modal-close" id="closeModalBtn">
+            <svg class="d-none d-md-inline-block" width="20" height="20" viewBox="0 0 20 20" fill="none" xmlns="http://www.w3.org/2000/svg">
+
+            <path d="M17 17L3 3" stroke="#A9A9A9" stroke-width="5" stroke-linecap="round" />
+            <path d="M17 3L3.03018 16.9698" stroke="#A9A9A9" stroke-width="5" stroke-linecap="round" />
+        </svg>
+            <svg class="d-inline-block d-md-none"width="12" height="12" viewBox="0 0 12 12" fill="none" xmlns="http://www.w3.org/2000/svg">
+                <path d="M10.5 10.5L1.5 1.5" stroke="#A9A9A9" stroke-width="3" stroke-linecap="round" />
+                <path d="M10.5 1.5L1.5194 10.4806" stroke="#A9A9A9" stroke-width="3" stroke-linecap="round" />
+            </svg>
+
+        </button>
+
 
         <div class="modal-icon mb-3">
             <img src="img/user-icon.svg" alt="User icon">
